<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout style="@style/LinearLayoutStyle">

            <TextView
                style="@style/TeamNameStyle"
                android:text="@string/TeamATextView" />

            <TextView
                android:id="@+id/team_a_score"
                style="@style/DisplayScoreViewStyle"
                android:text="@string/ScoreTextView" />

            <Button
                style="@style/ButtonStyle"
                android:layout_marginBottom="8dp"
                android:onClick="addSixForTeamA"
                android:text="@string/SixPoints" />

            <Button
                style="@style/ButtonStyle"
                android:layout_marginBottom="8dp"
                android:onClick="addThreeForTeamA"
                android:text="@string/ThreePoints" />

            <Button
                style="@style/ButtonStyle"
                android:layout_marginBottom="8dp"
                android:onClick="addTwoForTeamA"
                android:text="@string/TwoPoints" />

            <Button
                style="@style/ButtonStyle"
                android:layout_marginBottom="20dp"
                android:onClick="addOneForTeamA"
                android:text="@string/OnePoint" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout style="@style/LinearLayoutStyle">

            <TextView
                style="@style/TeamNameStyle"
                android:text="@string/TeamBTextView" />

            <TextView
                android:id="@+id/team_b_score"
                style="@style/DisplayScoreViewStyle"
                android:text="@string/ScoreTextView" />

            <Button
                style="@style/ButtonStyle"
                android:layout_marginBottom="8dp"
                android:onClick="addSixForTeamB"
                android:text="@string/SixPoints" />

            <Button
                style="@style/ButtonStyle"
                android:layout_marginBottom="8dp"
                android:onClick="addThreeForTeamB"
                android:text="@string/ThreePoints" />

            <Button
                style="@style/ButtonStyle"
                android:layout_marginBottom="8dp"
                android:onClick="addTwoForTeamB"
                android:text="@string/TwoPoints" />

            <Button
                style="@style/ButtonStyle"
                android:layout_marginBottom="20dp"
                android:onClick="addOneForTeamB"
                android:text="@string/OnePoint" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="32dp"
        android:onClick="resetScore"
        android:text="@string/ResetButton" />

</RelativeLayout>